--- a/team_member3.html
+++ b/team_member3.html
@@ -5,6 +5,6 @@
   	<title>CS 591 C2: Assignment 4</title>
   </head>
   <body>
-  	<p>Team member 3, CAS 2021, Major/Minor</p>
+  	<p>Ethan Timoteo Go, CAS 2020, Computer Science/Economics</p>
   </body>
 </html>
