--- a/team_member2.html
+++ b/team_member2.html
@@ -5,6 +5,6 @@
   	<title>CS 591 C2: Assignment 4</title>
   </head>
   <body>
-  	<p>Team member 2, CAS 2021, Major/Minor</p>
+  	<p>Elton Cheung, CAS 2020, Computer Science/Business Administration</p>
   </body>
 </html>
