--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>
       Team Members:
       <ul>
-      	<li><a href="team_member1.html">Team member 1's name goes here</a></li>
+      	<li><a href="team_member1.html">Jennie Nguyen</a></li>
       	<li><a href="team_member2.html">Team member 2's name goes here</a></li>
       	<li><a href="team_member3.html">Team member 3's name goes here</a></li>
       	<li><a href="team_member4.html">Timothy Choe</a></li>
